# SentimentAnalysis_on_CodeSwitching_Data

./: Makefile  README.md  evaluate.sh  predict.sh  pyproject.toml  requirements.txt  setup.sh  train.sh
data/: convert_data_for_baseline.py  data.csv  dev_split.csv  test_split.csv  train_split.csv
data/for_required_baseline/: dev.txt  test.txt  train.txt
notebooks/: sentiment.py
notebooks/logs/fit/20200707-191652/train/: events.out.tfevents.1594142212.Pavloss-Air.fritz.box.4955.7147.v2
notebooks/logs/fit/20200707-191902/train/: events.out.tfevents.1594142342.Pavloss-Air.fritz.box.4955.27607.v2
notebooks/logs/fit/20200707-194838/train/: events.out.tfevents.1594144118.Pavloss-Air.fritz.box.4955.48067.v2
notebooks/logs/fit/20200707-201229/train/: events.out.tfevents.1594145549.Pavloss-Air.fritz.box.4955.68527.v2  events.out.tfevents.1594145688.Pavloss-Air.fritz.box.profile-empty
notebooks/logs/fit/20200707-201229/train/plugins/profile/2020_07_07_20_14_48/: Pavloss-Air.fritz.box.input_pipeline.pb  Pavloss-Air.fritz.box.overview_page.pb  Pavloss-Air.fritz.box.tensorflow_stats.pb
src/: main.py
src/baseline/: baseline.py
src/data_preparation/: __init__.py  data_functions.py  facebook_comments.py
src/model/: __init__.py  evaluate.py  model.py  train.py
